Infrastructure-Fix xelatex testcases

--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FlexRev.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FlexRev.tex
@@ -22,76 +22,76 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemhi="Charis SIL/GR" at 10pt
-\font\xitemxitemcomplexformcomponentsbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemcomplexformentrytypebefore="Charis SIL/GR" at 12pt
-\font\xitemxitemcomplexformrefheadwordbefore="Charis SIL/GR" at 10pt
-\font\xitemxitemcomplexformrefsbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemdefinitionLebefore="Charis SIL/GR" at 10pt
-\font\xitemxitemexamplebefore="Charis SIL/GR/I" at 10pt
-\font\xitemxitemexamplesbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemmainentryrefbefore="Charis SIL/GR/B" at 10pt
-\font\xitemxitemmorphformbefore="Charis SIL/GR" at 10pt
-\font\xitemxitemprimaryrefsbefore="Charis SIL/GR" at 12pt
-\font\xitemxitempronunciationformbefore="Charis SIL/GR" at 10pt
-\font\xitemxitempronunciationsbefore="Charis SIL/GR" at 10pt
-\font\sensesensesensesbefore="Charis SIL/GR" at 12pt
-\font\letHeaddicBody="Charis SIL/GR" at 12pt
-\font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
-\font\letDatadicBody="Charis SIL/GR" at 12pt
-\font\entryletDatadicBody="Charis SIL/GR" at 10pt
-\font\reversalformLehientryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\spanhireversalformLehientryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\spanenreversalformLehientryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\sensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanensensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\headrefggoTeluINsensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\revsensenumberenheadrefggoTeluINsensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\morphformggoTeluINsensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenmorphformggoTeluINsensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\xitemhimorphformggoTeluINsensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\pronunciationssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenpronunciationssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\pronunciationpronunciationssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\pronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\grammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\spanengrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\partofspeechLehigrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\definitionLehisensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanendefinitionLehisensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanhidefinitionLehisensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\examplessensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenexamplessensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\exampleggoTeluINexamplessensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\spanenexampleggoTeluINexamplessensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\primaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\complexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\complexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\LexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenLexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\complexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\acomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\mainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\spanenmainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\xitemexamplessensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\exampleggoTeluINxitemexamplessensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\spanenexampleggoTeluINxitemexamplessensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody="Charis SIL/GR/I" at 10pt
-\font\complexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanencomplexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\complexformrefcomplexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\complexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanencomplexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\xitemhi="Annapurna SIL/GR" at 10pt
+\font\xitemxitemcomplexformcomponentsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformentrytypebefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefheadwordbefore="Times New Roman/GR" at 10pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionLebefore="Annapurna SIL/GR" at 10pt
+\font\xitemxitemexamplebefore="Times New Roman/GR/I" at 10pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemmainentryrefbefore="Times New Roman/GR/B" at 10pt
+\font\xitemxitemmorphformbefore="Times New Roman/GR" at 10pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationformbefore="Times New Roman/GR" at 10pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 10pt
+\font\sensesensesensesbefore="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Times New Roman/GR/B" at 24pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\reversalformLehientryletDatadicBody="Annapurna SIL/GR/B" at 10pt
+\font\spanhireversalformLehientryletDatadicBody="Annapurna SIL/GR/B" at 10pt
+\font\spanenreversalformLehientryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanensensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headrefggoTeluINsensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\revsensenumberenheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\morphformggoTeluINsensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenmorphformggoTeluINsensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitemhimorphformggoTeluINsensesentryletDatadicBody="Annapurna SIL/GR" at 10pt
+\font\spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\grammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanengrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\partofspeechLehigrammaticalinfosensesentryletDatadicBody="Annapurna SIL/GR/I" at 10pt
+\font\spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\definitionLehisensesentryletDatadicBody="Annapurna SIL/GR" at 10pt
+\font\spanendefinitionLehisensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanhidefinitionLehisensesentryletDatadicBody="Annapurna SIL/GR" at 10pt
+\font\examplessensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenexamplessensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluINexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanenexampleggoTeluINexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\primaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenLexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\acomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\mainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\spanenmainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\xitemexamplessensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluINxitemexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanenexampleggoTeluINxitemexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody="Times New Roman/GR/I" at 10pt
+\font\complexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanencomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanencomplexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody="Times New Roman/GR" at 10pt
 
 \mbox{} 
 \newpage 
