--- a/src/Test/XeLatex/TestFiles/LinuxExpected/GautamiFontTest.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/GautamiFontTest.tex
@@ -22,98 +22,98 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemhi="Charis SIL/GR" at 12pt
-\font\xitemte="Charis SIL/GR" at 12pt
-\font\xitemxitemCmPossibilitypublishStemTransTypeAbbreviationPubbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemcomplexformrefsbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemdefinitionbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemdefinitionLcbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemdefinitionLdbefore="Charis SIL/GR" at 12pt
-\font\xitemxitementryrefcomponentbefore="Charis SIL/GR" at 13pt
-\font\xitemxitementryreftypebefore="Charis SIL/GR" at 13pt
-\font\xitemxitemexamplebefore="Charis SIL/GR/I":color=0000FF at 12pt
-\font\xitemxitemexamplesbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemheadwordbefore="Charis SIL/GR/B" at 13pt
-\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Charis SIL/GR/B" at 13pt
-\font\xitemxitemLexSensepublishStemDefinitionPubbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemLexSensepublishStemDefinitionPubLdbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemprimaryrefsbefore="Charis SIL/GR" at 12pt
-\font\xitemxitempronunciationbefore="Charis SIL/GR" at 13pt
-\font\xitemxitempronunciationsbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemsemanticdomainsbefore="Charis SIL/GR" at 12pt
-\font\sensesensesensesbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemtranslationbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemtranslationLdbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemcrossrefbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemcrossreftargetsbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemcrossreftypebefore="Charis SIL/GR" at 13pt
-\font\xitemxitemheadwordminorbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemmainentryrefbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemmainentryrefminorbefore="Charis SIL/GR" at 13pt
-\font\xitemxitempronunciationminorbefore="Charis SIL/GR" at 13pt
-\font\xitemxitemsensecrossrefbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemsensemainentryrefbefore="Charis SIL/GR" at 13pt
-\font\letHeaddicBody="Charis SIL/GR" at 16pt
+\font\xitemhi="Times New Roman/GR" at 12pt
+\font\xitemte="Times New Roman/GR" at 12pt
+\font\xitemxitemCmPossibilitypublishStemTransTypeAbbreviationPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemdefinitionLcbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitementryrefcomponentbefore="Times New Roman/GR" at 13pt
+\font\xitemxitementryreftypebefore="Times New Roman/GR" at 13pt
+\font\xitemxitemexamplebefore="Times New Roman/GR/I":color=0000FF at 12pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Times New Roman/GR/B" at 13pt
+\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Times New Roman/GR/B" at 13pt
+\font\xitemxitemLexSensepublishStemDefinitionPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemLexSensepublishStemDefinitionPubLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Times New Roman/GR" at 13pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemsemanticdomainsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemtranslationbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemtranslationLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcrossrefbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemcrossreftargetsbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemcrossreftypebefore="Times New Roman/GR" at 13pt
+\font\xitemxitemheadwordminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemmainentryrefbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemmainentryrefminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitempronunciationminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemsensecrossrefbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemsensemainentryrefbefore="Times New Roman/GR" at 13pt
+\font\letHeaddicBody="Times New Roman/GR" at 16pt
 \font\letterletHeaddicBody="Charis SIL/GR/B" at 16pt
-\font\letDatadicBody="Charis SIL/GR" at 13pt
-\font\entryletDatadicBody="Charis SIL/GR" at 13pt
-\font\headwordggoTeluINentryletDatadicBody="Charis SIL/GR/B" at 13pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Charis SIL/GR/B" at 13pt
-\font\pronunciationsentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenpronunciationsentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\sensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\sensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/BI":color=800080 at 13pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/BI":color=800080 at 13pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/BI":color=800080 at 13pt
-\font\spanengrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/BI":color=800080 at 13pt
-\font\definitionensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\LexSensepublishStemDefinitionPubensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenLexSensepublishStemDefinitionPubensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\LexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenxitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanhixitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spantexitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\examplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=0000FF at 12pt
-\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=0000FF at 13pt
-\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=0000FF at 13pt
-\font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\CmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\CmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\CmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenexamplessensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\semanticdomainssensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanensemanticdomainssensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\semanticdomainabbrensemanticdomainssensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\semanticdomainnameensemanticdomainssensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanensemanticdomainnameensemanticdomainssensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanensensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\definitionLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemendefinitionLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenxitemendefinitionLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanendefinitionLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemtedefinitionLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spantexitemtedefinitionLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\LexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spanenxitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\xitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
-\font\spantexitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Charis SIL/GR" at 13pt
+\font\letDatadicBody="Times New Roman/GR" at 13pt
+\font\entryletDatadicBody="Times New Roman/GR" at 13pt
+\font\headwordggoTeluINentryletDatadicBody="Times New Roman/GR/B" at 13pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B" at 13pt
+\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemDefinitionPubensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenLexSensepublishStemDefinitionPubensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanhixitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantexitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 12pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 13pt
+\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 13pt
+\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainabbrensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainnameensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainnameensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\definitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemendefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemendefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanendefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemtedefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantexitemtedefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantexitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
 
 \mbox{} 
 \newpage 
