--- a/src/Test/XeLatex/TestFiles/LinuxExpected/MarginBottom.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/MarginBottom.tex
@@ -22,30 +22,30 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\diven="Charis SIL/GR" at 12pt
-\font\spanen="Charis SIL/GR" at 12pt
+\font\diven="Times New Roman/GR" at 12pt
+\font\spanen="Times New Roman/GR" at 12pt
 \font\divggofonipaxemic="Charis SIL/GR" at 12pt
 \font\spanggofonipaxemic="Charis SIL/GR" at 12pt
 \font\divte="Charis SIL/GR" at 12pt
 \font\spante="Charis SIL/GR" at 12pt
-\font\divhi="Charis SIL/GR" at 12pt
-\font\spanhi="Charis SIL/GR" at 12pt
+\font\divhi="Annapurna SIL/GR" at 12pt
+\font\spanhi="Annapurna SIL/GR" at 12pt
 \font\divggoTeluIN="Charis SIL/GR" at 12pt
 \font\spanggoTeluIN="Charis SIL/GR" at 12pt
-\font\xitemte="Charis SIL/GR" at 10pt
-\font\xitemhi="Charis SIL/GR" at 10pt
-\font\xitemtpi="Charis SIL/GR" at 12pt
-\font\letHeaddicBody="Charis SIL/GR/B" at 12pt
+\font\xitemte="Times New Roman/GR" at 10pt
+\font\xitemhi="Annapurna SIL/GR" at 10pt
+\font\xitemtpi="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Times New Roman/GR/B" at 12pt
 \font\letterletHeaddicBody="Charis SIL/GR/B" at 18pt
-\font\letDatadicBody="Charis SIL/GR" at 12pt
-\font\entryletDatadicBody="Charis SIL/GR" at 10pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
 \font\headwordggoTeluINentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Charis SIL/GR/B" at 10pt
-\font\pronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
 \font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
 \font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
-\font\spanenpronunciationsentryletDatadicBody="Charis SIL/GR" at 10pt
+\font\spanenpronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
 
 \mbox{} 
 \newpage 
