--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ReplaceString.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ReplaceString.tex
@@ -23,12 +23,12 @@
 \font\scrBookscrBody="Charis SIL/GR" at 12pt
 \font\LinebscrBookscrBody="Charis SIL/GR" at 10pt
 \font\spanbgtLinebscrBookscrBody="Charis SIL/GR" at 10pt
-\font\VerseNumberbgtLinebscrBookscrBody="Charis SIL/GR" at 10pt
+\font\VerseNumberbgtLinebscrBookscrBody="Times New Roman/GR" at 10pt
 \font\ParagraphContinuationscrBookscrBody="Charis SIL/GR" at 10pt
 \font\spanbgtParagraphContinuationscrBookscrBody="Charis SIL/GR" at 10pt
 \font\scrSectionscrBody="Charis SIL/GR" at 12pt
 \font\ParagraphContinuationscrSectionscrBody="Charis SIL/GR" at 10pt
-\font\VerseNumberbgtParagraphContinuationscrSectionscrBody="Charis SIL/GR" at 10pt
+\font\VerseNumberbgtParagraphContinuationscrSectionscrBody="Times New Roman/GR" at 10pt
 \font\spanbgtParagraphContinuationscrSectionscrBody="Charis SIL/GR" at 10pt
 \font\LinebscrSectionscrBody="Charis SIL/GR" at 10pt
 \font\spanbgtLinebscrSectionscrBody="Charis SIL/GR" at 10pt
