--- a/src/Test/XeLatex/TestFiles/LinuxExpected/VerticalAlign.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/VerticalAlign.tex
@@ -20,32 +20,32 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemtpi="Charis SIL/GR":color=000000 at 12pt
-\font\xitembzhfonipa="Charis SIL/GR":color=000000 at 12pt
-\font\xitemxitemheadwordbefore="Charis SIL/GR/B":color=000000 at 12pt
+\font\xitemtpi="Times New Roman/GR":color=000000 at 12pt
+\font\xitembzhfonipa="Times New Roman/GR":color=000000 at 12pt
+\font\xitemxitemheadwordbefore="Times New Roman/GR/B":color=000000 at 12pt
 \font\xitemxitemexamplesbefore="Charis SIL/GR" at 12pt
-\font\xitemxitemexamplebefore="Charis SIL/GR/I":color=000000 at 12pt
+\font\xitemxitemexamplebefore="Times New Roman/GR/I":color=000000 at 12pt
 \font\xitemxitemslotsbefore="Charis SIL/GR" at 12pt
-\font\entrydicBody="Charis SIL/GR":color=000000 at 12pt
+\font\entrydicBody="Times New Roman/GR":color=000000 at 12pt
 \font\letHeaddicBody="Charis SIL/GR" at 12pt
 \font\letterletHeaddicBody="Charis SIL/GR" at 12pt
 \font\letDatadicBody="Charis SIL/GR" at 12pt
-\font\entryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\headwordbzhentryletDatadicBody="Charis SIL/GR/B":color=000000 at 12pt
-\font\examplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\examplebzhexamplesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 12pt
-\font\xlanguagetagenexamplebzhexamplesentryletDatadicBody="Charis SIL/GR/I":color=2F60FF at 8pt
-\font\translationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\translationentranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\xlanguagetagentranslationentranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=2F60FF at 8pt
-\font\relationstranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\xitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\lexreftypeenxitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\lexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\xitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\sensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR":color=000000 at 12pt
-\font\xsensenumberensensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR/B":color=000000 at 12pt
-\font\xhomographnumberbzhsensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Charis SIL/GR/B":color=000000 at 6.6pt
+\font\entryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\headwordbzhentryletDatadicBody="Times New Roman/GR/B":color=000000 at 12pt
+\font\examplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\examplebzhexamplesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 12pt
+\font\xlanguagetagenexamplebzhexamplesentryletDatadicBody="Times New Roman/GR/I":color=2F60FF at 8pt
+\font\translationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\translationentranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xlanguagetagentranslationentranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=2F60FF at 8pt
+\font\relationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\lexreftypeenxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\lexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\sensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR":color=000000 at 12pt
+\font\xsensenumberensensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR/B":color=000000 at 12pt
+\font\xhomographnumberbzhsensecrossrefbzhxitemlexreftargetsxitemrelationstranslationsexamplesentryletDatadicBody="Times New Roman/GR/B":color=000000 at 6.6pt
 
 \mbox{} 
 \newpage 
