--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeight700.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeight700.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Charis SIL/GR/B" at 24pt
+\font\letter="Times New Roman/GR/B" at 24pt
 
 \mbox{} 
 \newpage 
