--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PictureWidth.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PictureWidth.tex
@@ -23,7 +23,7 @@
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\letHeaddicBody="Charis SIL/GR" at 12pt
-\font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
+\font\letterletHeaddicBody="Times New Roman/GR/B" at 24pt
 \font\letDatadicBody="Charis SIL/GR" at 12pt
 \font\entryletDatadicBody="Charis SIL/GR":color=000000 at 11pt
 \font\pictureRightentryletDatadicBody="Charis SIL/GR":color=000000 at 11pt
